# toy_scalar

./: README.md
toy_scalar/: DW_div_fpga.v  README.md  TRAP_README.md  gen_coe.py  import_filelist.tcl  makefile  toy_filelist.f  wave.fsdb  wsl_prj.env
toy_scalar/csmoke/: sanity_imm.asm
toy_scalar/doc/: alu.drawio
toy_scalar/jtag_dpi/jtagdpi/: jtagdpi.sv
toy_scalar/model/: branch_prediction_model.py
toy_scalar/openocd/: opocd.cfg
toy_scalar/plug_in/disassembler/: toy_scalar_disasm_sv_wrapper.c
toy_scalar/rtl/: async_reset_sync_release.sv  debug_pack.sv  makefile  mem_adapter.sv  test.sv  toy_debug.f  toy_env_slv.sv  toy_pack.sv  toy_scalar.f  toy_scalar.sv  toy_top.sv
toy_scalar/rtl/bak/: toy_0dly_mem.sv  toy_fetch.sv  toy_inst_mem.sv
toy_scalar/rtl/bus/: apb_bus.py  toy_bus.py  toy_bus_fetch_slv.py  toy_bus_lsu_slv.py
toy_scalar/rtl/bus/toy_bus_DWrap_network_toy_bus/: toy_bus_CmnAgeMtx_width_4.v  toy_bus_DArb2ch_node_arb_lsu_dbg_fwd_pld_type_ToyBusReq_bwd_pld_type_ToyBusAck.v  toy_bus_DArb_node_dec_dmem_pld_type_ToyBusAck_forward_False.v  toy_bus_DArb_node_dec_lsu_pld_type_ToyBusAck_forward_False.v  toy_bus_DDec2ch_node_dec_dmem_fwd_pld_type_ToyBusReq_bwd_pld_type_ToyBusAck.v  toy_bus_DDec2ch_node_dec_fetch_fwd_pld_type_ToyBusReq_bwd_pld_type_ToyBusAck.v  toy_bus_DDec_node_arb_dtcm_pld_type_ToyBusAck_forward_False.v  toy_bus_DDec_node_arb_itcm_pld_type_ToyBusAck_forward_False.v  toy_bus_DDec_node_arb_lsu_dbg_pld_type_ToyBusAck_forward_False.v  toy_bus_DDec_node_dec_fetch_pld_type_ToyBusReq_forward_True.v  toy_bus_DWrap_network_toy_bus.v  toy_bus_ToyCoreSlv_node_debug_sysbus_fwd_pld_type_ToyBusReq_bwd_pld_type_ToyBusAck_forward_True.v  toy_bus_ToyCoreSlv_node_fetch_fwd_pld_type_ToyBusReq_bwd_pld_type_ToyBusAck_forward_True.v  toy_bus_ToyCoreSlv_node_lsu_fwd_pld_type_ToyBusReq_bwd_pld_type_ToyBusAck_forward_True.v  toy_bus_ToyDbgMst_node_debug_fwd_pld_type_ToyBusReq_bwd_pld_type_ToyBusAck_forward_True.v  toy_bus_ToyDbgMst_node_peripheral_fwd_pld_type_ToyBusReq_bwd_pld_type_ToyBusAck_forward_True.v  toy_bus_ToyMemMst_node_eslv_fwd_pld_type_ToyBusReq_bwd_pld_type_ToyBusAck_forward_True.v  toy_debug_bus.f
toy_scalar/rtl/core/: toy_commit.sv  toy_commit_old.sv  toy_core.sv  toy_csr.sv  toy_csr_os.sv  toy_decoder.sv  toy_dispatch.sv  toy_ext_inter.sv  toy_fetch2.sv  toy_fetch3.sv  toy_lsu.sv  toy_regfile.sv  toy_rtu.sv  toy_spu.sv  toy_trap.sv
toy_scalar/rtl/core/pmp/: cmn_onehot2bin.sv  csr_bus.sv  pmp.sv  pmp_addr_check.sv  pmp_compare.sv
toy_scalar/rtl/debug/async_fifo/: async_fifo.v  fifomem.v  fifomem_dp.v
toy_scalar/rtl/debug/debug_rtl/: access_reg_decode.sv  debug_module.sv  debug_ram.sv  debug_sys.sv  dtm_reg_bnk.sv
toy_scalar/rtl/mem/: toy_mem_model.sv  toy_mem_model_tb.sv
toy_scalar/rtl/perips/: perips_sys.sv
toy_scalar/rtl/perips/apb_gpio/: gpio.f
toy_scalar/rtl/perips/apb_uart/: apb_uart.v  uart_tx.v
toy_scalar/rv_isa_test/: CMakeLists.txt
toy_scalar/tcm/: coremark.dtcm.hex  coremark.elf  coremark.itcm.hex  dhrystone.S  dhrystone.elf  dhrystone.itcm.hex  dhrystone_dtcm.coe  dhrystone_itcm.coe
toy_scalar/test/: main.map  makefile  rvload.asm  rvload.elf  rvload.hex  sanity_imm.asm.64  sanity_imm.elf  sanity_jal.hex  sanity_ls.elf  sanity_ls.hex  sanity_rv_vec.elf  sanity_rv_vec.hex
toy_scalar/tools/: DW02_mult.v  DW_div.v
toy_scalar/tools/sim_ver/: DW01_absval.v  DW01_absval_function.inc  DW01_add.v  DW01_addsub.v  DW01_ash.v  DW01_ash_function.inc  DW01_binenc.v  DW01_binenc_function.inc  DW01_bsh.v  DW01_bsh_function.inc  DW01_cmp2.v  DW01_cmp6.v  DW01_csa.v  DW01_dec.v  DW01_decode.v  DW01_decode_function.inc  DW01_inc.v  DW01_incdec.v  DW01_mux_any.v  DW01_prienc.v  DW01_prienc_function.inc  DW01_satrnd.v  DW01_sub.v  DW02_divide_function.inc  DW02_mac.v  DW02_mac_function.inc  DW02_mult_2_stage.v  DW02_mult_3_stage.v  DW02_mult_4_stage.v  DW02_mult_5_stage.v  DW02_mult_6_stage.v  DW02_mult_DG.v  DW02_mult_function.inc  DW02_multp.v  DW02_prod_sum.v  DW02_prod_sum1.v  DW02_sum.v  DW02_sum_function.inc  DW02_tree.v  DW03_bictr_dcnto.v  (+225 more)
toy_scalar/tools/sim_ver/vcs/: DW02_multp.v  DW02_tree.v  DW_exp2.v  DW_squarep.v
toy_scalar/unittest/: Makefile  dump_reg.spike.cmd  hello_word.s  sanity_imm.s  sanity_ls.s  spike.ld  toy.ld
toy_scalar/work/rtl_compile/: simv  vc_hdrs.h
toy_scalar/work/rtl_compile/csrc/: .1151044.1151044.0.compview.txt  .1153015.1153015.0.compview.txt  .1156692.1156692.0.compview.txt  .1210445.1210445.0.compview.txt  Makefile.hsopt  _prev_cginfo.json  cgincr.sdb  cginfo.json  cgproc.1210981.json  filelist  filelist.cu  filelist.dpi  filelist.hsopt  (+4 more)
toy_soc/: DEBUG_README.md  DW_mult_fpga.v  SOC_README.md  debug_rom.coe  git.sh  makefile  makefile.bak  prj.env  set_spike.bash  top_define.v  toy_scalar.xdc  wave.fsdb
toy_soc/csmoke/: Makefile  main.elf  main.map
toy_soc/doc/: debug_sys.drawio  perf_log.md  trap.drawio  uarch.drawio
toy_soc/jtag_dpi/jtagdpi/: jtagdpi.c
toy_soc/model/: Trace.py
toy_soc/plug_in/disassembler/: riscv_disas.c
toy_soc/qc/: lint.tcl
toy_soc/qemu_trace/: qemu_trace_translate.py
toy_soc/rtl/: makefile  sim.f  toy_pack.sv  toy_scalar.sv  toy_top.sv  toy_top_fpga.sv
toy_soc/rtl/bak/: toy_1dly_mem.sv  toy_1dly_mem_model.sv
toy_soc/rtl/bus/: Makefile  protocol.md  toy_bus_dbg_mst.py  toy_bus_mem_mst.py
toy_soc/rtl/core/: toy_alu.sv  toy_commit.sv  toy_core.sv  toy_csr.sv  toy_csr_os.sv  toy_dispatch.sv  toy_dispatch2.sv  toy_ext_inter.sv  toy_fetch3.sv  toy_fetch_queue.sv  toy_fetch_queue2.sv  toy_lsu.sv  toy_mext.sv  toy_rtu.sv  toy_spu.sv  toy_trap.sv
toy_soc/rtl/device/: toy_uart_model.sv
toy_soc/rtl/mem/: filelist.f  makefile  toy_mem_adapter.sv
toy_soc/rtl/perips/: perips.f  sysbus2apb.sv
toy_soc/tcm/: coremark.S  dhrystone.dtcm.hex
toy_soc/test/: sanity_imm.asm  sanity_imm.hex  sanity_imm.s  sanity_jal.asm  sanity_jal.elf  sanity_jal.s  sanity_ls.asm  sanity_ls.s  sanity_rv_vec.asm  sanity_wenv.asm  sanity_wenv.elf  sanity_wenv.hex  sanity_wenv.s
toy_soc/unittest/: CMakeLists.txt  sanity_jal.s  sanity_wenv.s
toy_soc/work/rtl_compile/: simv
(+169 files in other folders)
